# harken

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/harken/: __init__.py  cli.py  config.py  models.py  pipeline.py  sample_data.py  store.py
src/harken/analyze/: __init__.py  insights.py  sentiment.py
src/harken/llm/: __init__.py  anthropic_provider.py  base.py  null.py  ollama_provider.py  openai_provider.py
src/harken/sources/: __init__.py  base.py  bluesky.py  hackernews.py  mastodon.py  reddit.py  rss.py
src/harken/web/: __init__.py  app.py
src/harken/web/static/: app.js  style.css
src/harken/web/static/fonts/: README.md
src/harken/web/templates/: dashboard.html
tests/: test_insights.py  test_llm.py  test_pipeline.py  test_sentiment.py  test_sources.py  test_store.py
